tests/unit/tmp.txt
======================================================================
ERROR: test_storage_path_setter_with_storage_path_object (models.test_document.TestDocumentSetters.test_storage_path_setter_with_storage_path_object)
Test setting storage_path with a StoragePath object.
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/mnt/c/Users/jessa/Work/Projects/Paperap/tests/unit/models/test_document.py", line 594, in test_storage_path_setter_with_storage_path_object
    storage_path = StoragePath(id=1, name="Test Storage Path")
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/c/Users/jessa/Work/Projects/Paperap/src/paperap/models/abstract/model.py", line 297, in __init__
    super().__init__(**data)
  File "/mnt/c/Users/jessa/Work/Projects/Paperap/.venv/lib/python3.12/site-packages/pydantic/main.py", line 214, in __init__
    validated_self = self.__pydantic_validator__.validate_python(data, self_instance=self)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
pydantic_core._pydantic_core.ValidationError: 1 validation error for StoragePath
is_insensitive
  Field required [type=missing, input_value={'id': 1, 'name': 'Test Storage Path'}, input_type=dict]
    For further information visit https://errors.pydantic.dev/2.10/v/missing

======================================================================
ERROR: test_tags_setter_with_mixed_types (models.test_document.TestDocumentSetters.test_tags_setter_with_mixed_types)
Test setting tags with a mix of integers and Tag objects.
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/mnt/c/Users/jessa/Work/Projects/Paperap/tests/unit/models/test_document.py", line 522, in test_tags_setter_with_mixed_types
    tag = Tag(id=2, name="Tag 2")
          ^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/c/Users/jessa/Work/Projects/Paperap/src/paperap/models/abstract/model.py", line 297, in __init__
    super().__init__(**data)
  File "/mnt/c/Users/jessa/Work/Projects/Paperap/.venv/lib/python3.12/site-packages/pydantic/main.py", line 214, in __init__
    validated_self = self.__pydantic_validator__.validate_python(data, self_instance=self)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
pydantic_core._pydantic_core.ValidationError: 1 validation error for Tag
is_insensitive
  Field required [type=missing, input_value={'id': 2, 'name': 'Tag 2'}, input_type=dict]
    For further information visit https://errors.pydantic.dev/2.10/v/missing

======================================================================
ERROR: test_tags_setter_with_tag_objects (models.test_document.TestDocumentSetters.test_tags_setter_with_tag_objects)
Test setting tags with Tag objects.
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/mnt/c/Users/jessa/Work/Projects/Paperap/tests/unit/models/test_document.py", line 515, in test_tags_setter_with_tag_objects
    tag1 = Tag(id=1, name="Tag 1")
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/c/Users/jessa/Work/Projects/Paperap/src/paperap/models/abstract/model.py", line 297, in __init__
    super().__init__(**data)
  File "/mnt/c/Users/jessa/Work/Projects/Paperap/.venv/lib/python3.12/site-packages/pydantic/main.py", line 214, in __init__
    validated_self = self.__pydantic_validator__.validate_python(data, self_instance=self)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
pydantic_core._pydantic_core.ValidationError: 1 validation error for Tag
is_insensitive
  Field required [type=missing, input_value={'id': 1, 'name': 'Tag 1'}, input_type=dict]
    For further information visit https://errors.pydantic.dev/2.10/v/missing
